--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.9.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.8",
     "lucide-react": "^0.368.0",
     "next": "14.1.4",
+    "parse-links": "^0.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
