--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db:introspect": "drizzle-kit introspect:pg --config=drizzle.config.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@neondatabase/serverless": "^0.9.1",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -23,12 +25,13 @@
     "parse-links": "^0.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.2",
-    "zod": "^3.22.4"
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/node": "^20",
